fixed small screen cutting off navi

--- a/assets/lcms/scss/lcms.scss
+++ b/assets/lcms/scss/lcms.scss
@@ -19,7 +19,7 @@ $orange: #fa503a;
 	position: absolute;
 	top: 0;
 	left: 0px;
-	height: 100%;
+	min-height: 100%;
 	color: #fff;
 	z-index: 3;
 
